Improvements, now have a generic email accepter.

--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
 
 <ul>
 {% for spam in spams %}
-<li><a href="view/{{ spam.key }}">{{ spam.title }}</a></li>
+<li><a href="seed/{{ spam.key }}">{{ spam.title }}</a></li>
 {% endfor %}
 </ul>
 
