Update to views to use popovers for raw out.

--- a/templates/base.html
+++ b/templates/base.html
@@ -8,6 +8,8 @@
     <style type="text/css">
 body { padding-top: 60px; padding-bottom: 40px; }
 .seed-list li { list-style-type: none; padding-bottom: 1em; }
+.body { margin: 0 75px; }
+/*
 .NN { color:red; }
 .NNS { color: yellow; }
 .NNP { color:orange; }
@@ -17,6 +19,7 @@ body { padding-top: 60px; padding-bottom: 40px; }
 .DT { color: magenta; }
 .VB, .VBD, .VBP, .VBZ, .VBG { color: purple; }
 .IN, .TO, .\., .\,, .\:, .RB { color: #eeeeee; }
+*/
     </style>
 </head>
 
@@ -31,5 +34,13 @@ body { padding-top: 60px; padding-bottom: 40px; }
     </div>
 
 {% block content %}{% endblock %}
+
+    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
+    <script type="text/javascript" src="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.1.0/js/bootstrap.min.js"></script>
+    <script type="text/javascript">
+$(document).ready(function() {
+    $('.body span').popover();
+});
+    </script>
 </body>
 </html>
