--- a/templates/input_form.html
+++ b/templates/input_form.html
@@ -1,9 +1,6 @@
 {% extends "base.html" %}
 
 {% block menu %}
-    <ul class="nav">
-        <li><a href="/">List</a></li>
-    </ul>
 {% endblock %}
 
 {% block content %}
@@ -27,7 +24,11 @@
                         </div>
                     </div>
 
-                    <input type="submit" class="btn" value="Spam It!" />
+                    <div class="control-group">
+                        <div class="controls">
+                            <input type="submit" class="btn span1" value="Spam It!" />
+                        </div>
+                    </div>
                 </form>
             </div>
         </div>
