--- a/templates/seed_fields.html
+++ b/templates/seed_fields.html
@@ -1,29 +1,32 @@
 {% extends "base.html" %}
 
 {% block menu %}
-    <ul class="nav">
-        <li><a href="/">List</a></li>
-    </ul>
 {% endblock %}
 
 {% block content %}
-    <div class="container-fluid">
+    <form action="/seed/{{ key }}" method="POST" class="container-fluid">
         <div class="row-fluid">
             <div class="span12">
-                <h2>{{ title }}</h2>
-
-                <form action="/seed/{{ key }}" method="POST">
-                    <ul class="seed-list">
-                        {% for lib in libs %}
-                        <li>
-                            <input type="text" name="{{ lib.key }}" class="input-large" />
-                            <span class="help-block">{{ lib.description }}</span>
-                        </li>
-                        {% endfor %}
-                    </ul>
-                    <input class="btn" type="submit"/> <input class="btn" type="reset"/>
-                </form>
+                <h2 class="span12">{{ title }}</h2>
             </div>
         </div>
-    </div>
+        <div class="row-fluid">
+            <div class="span12">
+                {% for lib in libs %}
+                {% if forloop.counter0|divisibleby:3 %}<div class="row-fluid">{% endif %}
+                    <div class="span2">
+                        <input type="text" name="{{ lib.key }}" class="span12" /><br/>
+                        <span class="help-block span12">{{ lib.description }}</span>
+                    </div>
+                {% if forloop.counter|divisibleby:3 %}</div>{% endif %}
+                {% endfor %}
+            </div>
+        </div>
+        <div class="row-fluid">
+            <div class="span12">
+                <div class="span2 offset2"><input class="btn span12" type="submit"/></div>
+                <div class="span2"><input class="btn span12" type="reset"/></div>
+            </div>
+        </div>
+    </form>
 {% endblock %}
