--- a/templates/output_raw.html
+++ b/templates/output_raw.html
@@ -17,5 +17,36 @@
                 </div>
             </div>
         </div>
+        
+        <div class="row-fluid">
+            {% if is_processed %}
+            <form id="rating-form" class="span6" action="/rate/{{ key }}" method="post">
+                <label class="checkbox inline">
+                <input type="radio" name="rating" id="inlineCheckbox1" value="1"> 1
+                </label>
+                <label class="checkbox inline">
+                <input type="radio" name="rating" id="inlineCheckbox2" value="2"> 2
+                </label>
+                <label class="checkbox inline">
+                <input type="radio" name="rating" id="inlineCheckbox3" value="3"> 3
+                </label>
+                <label class="checkbox inline">
+                <input type="radio" name="rating" id="inlineCheckbox1" value="4"> 4
+                </label>
+                <label class="checkbox inline">
+                <input type="radio" name="rating" id="inlineCheckbox2" value="5"> 5
+                </label>
+                <input id="do-rating" class="btn" type="submit" value="Rate"/>
+            </form>
+            {% else %}
+            <div class="span6">
+                <p>This spam has an overall rating of {{ rating }}.</p>
+            </div>
+            {% endif %}
+            
+            <div class="span6">
+                <p>This spam has been viewed {{ views }} times.</p>
+            </div>
+        </div>
     </div>
 {% endblock %}
