--- a/templates/base.html
+++ b/templates/base.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Spamlibs - Spam meets madlibs</title>
+    <title>Spamlibs - Spam meets Madlibs&trade;</title>
     <link rel="stylesheet" type="text/css" href="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.1.0/css/bootstrap-combined.min.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <style type="text/css">
