--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
             <div class="span12">
                 <div class="hero-unit">
                     <h1>Spamlibs</h1>
-                    <p>Spamlibs is a mashup of spam email and the mad-libs word game.<p>
+                    <p>Spamlibs is a mashup of spam email and the Madlibs&trade; word game.<p>
                 </div>
             </div>
         </div>
@@ -64,6 +64,13 @@
                 {% endif %}
             </div>
 
+        </div>
+        
+        <div class="row-fluid">
+            <div class="span12">
+                Madlibs&trade; is Copyright &copy; 2010 Pengiun Group(USA), and
+                is in no way related to Spamlibs.
+            </div>
         </div>
     </div>
 {% endblock %}
