--- a/templates/base.html
+++ b/templates/base.html
@@ -3,11 +3,14 @@
 
 <head>
     <title>Spamlibs - Spam meets Madlibs&trade;</title>
-    <link rel="stylesheet" type="text/css" href="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.1.0/css/bootstrap-combined.min.css" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <style type="text/css">
+body {
+    padding-top: 60px;
+}
 @media (min-width:980px) {
-    body { padding-top: 60px; padding-bottom: 40px; }
+    body { padding-top: 90px; padding-bottom: 40px; }
 }
 .seed-list li { list-style-type: none; padding-bottom: 1em; }
 .body { margin: 0 75px; }
@@ -26,25 +29,23 @@
 </head>
 
 <body>
-    <div class="navbar navbar-fixed-top">
-        <div class="navbar-inner">
-            <div class="container-fluid">
-                <a class="brand" href="/">Spamlibs</a>
-                <ul class="nav">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+        <div class="container-fluid">
+                <a class="navbar-brand" href="/">Spamlibs</a>
+                <ul class="navbar-nav">
                     <li><a href="/supply">Add New Spam</a></li>
                 </ul>
                 {% block menu %}{% endblock %}
-                <ul class="nav pull-right">
+                <ul class="navbar-nav">
                     <li><a href="{{ userurl }}">{% if user %}Logout {{ user.nickname }}{% else %}Login{% endif %}</a></li>
                 </ul>
-            </div>
         </div>
-    </div>
+    </nav>
 
 {% block content %}{% endblock %}
 
-    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
-    <script type="text/javascript" src="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.1.0/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="https://code.jquery.com/jquery-3.6.0.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script type="text/javascript">
 $(document).ready(function() {
     $('.body span').popover();
