--- a/templates/index.html
+++ b/templates/index.html
@@ -1,16 +1,18 @@
 {% extends "base.html" %}
 {% block content %}
     <div class="container-fluid">
-        <div class="row-fluid">
-            <div class="span12">
-                <div class="hero-unit">
-                    <h1>Spamlibs</h1>
-                    <p>Spamlibs is a mashup of spam email and the Madlibs&trade; word game.<p>
+        <div class="row">
+            <div class="col col-12">
+		<div class="px-4 py-5 my-5 text-center">
+                    <h1 class="display-5 fw-bold">Spamlibs</h1>
+                    <div class="col-lg-6 mx-auto">
+			<p class="lead mb-4">Spamlibs is a mashup of spam email and the Madlibs&trade; word game.</p>
+                    </div>
                 </div>
             </div>
         </div>
-        <div class="row-fluid">
-            <div class="span4">
+        <div class="row">
+            <div class="col-4">
                 <h2>Recent Spams</h2>
 
                 <ol>
@@ -20,15 +22,15 @@
                 </ol>
                         
                 {% if more %}
-                <div class="row-fluid">
-                    <div class="span2">
+                <div class="row">
+                    <div class="col-2">
                         <a class="btn" href="/list/1?order=-date">More...</a>
                     </div>
                 </div>
                 {% endif %}
             </div>
             
-            <div class="span4">
+            <div class="col-4">
                 <h2>Most Viewed Spams</h2>
 
                 <ol>
@@ -38,15 +40,15 @@
                 </ol>
         
                 {% if more %}
-                <div class="row-fluid">
-                    <div class="span2">
+                <div class="row">
+                    <div class="col-2">
                         <a class="btn" href="/list/1?order=-views">More...</a>
                     </div>
                 </div>
                 {% endif %}
             </div>
             
-            <div class="span4">
+            <div class="col-4">
                 <h2>Most Popular Spams</h2>
 
                 <ol>
@@ -56,8 +58,8 @@
                 </ol>
         
                 {% if more %}
-                <div class="row-fluid">
-                    <div class="span2">
+                <div class="row">
+                    <div class="col-2">
                         <a class="btn" href="/list/1?order=-rating">More...</a>
                     </div>
                 </div>
@@ -66,8 +68,8 @@
 
         </div>
         
-        <div class="row-fluid">
-            <div class="span12">
+        <div class="row">
+            <div class="col-12">
                 Madlibs&trade; is Copyright &copy; 2010 Pengiun Group(USA), and
                 is in no way related to Spamlibs.
             </div>
