--- a/templates/seed_fields.html
+++ b/templates/seed_fields.html
@@ -5,28 +5,26 @@
 
 {% block content %}
     <form action="/seed/{{ key }}" method="POST" class="container-fluid">
-        <div class="row-fluid">
-            <div class="span12">
-                <h2 class="span12">{{ title }}</h2>
+        <div class="row">
+            <div class="col-12">
+                <h2 class="col-12">{{ title }}</h2>
             </div>
         </div>
-        <div class="row-fluid">
-            <div class="span12">
+        <div class="row">
+            <div class="col-12">
                 {% for lib in libs %}
-                {% if forloop.counter0|divisibleby:3 %}<div class="row-fluid">{% endif %}
-                    <div class="span2">
-                        <input type="text" name="{{ lib.key }}" class="span12" /><br/>
-                        <span class="help-block span12">{{ lib.description }}</span>
+                {% if forloop.counter0|divisibleby:3 %}<div class="row">{% endif %}
+                    <div class="col-4">
+                        <input type="text" name="{{ lib.key }}" class="col-12" /><br/>
+                        <span class="help-block col-12">{{ lib.description }}</span>
                     </div>
                 {% if forloop.counter|divisibleby:3 %}</div>{% endif %}
                 {% endfor %}
             </div>
         </div>
-        <div class="row-fluid">
-            <div class="span12">
-                <div class="span2 offset2"><input class="btn span12" type="submit"/></div>
-                <div class="span2"><input class="btn span12" type="reset"/></div>
-            </div>
+        <div class="row">
+            <div class="col-4 offset-md-2"><input class="btn btn-primary col-12" type="submit"/></div>
+            <div class="col-4"><input class="btn btn-secondary col-12" type="reset"/></div>
         </div>
     </form>
 {% endblock %}
